--- a/packages/views/s-views/src/views/sugar/readme/layouts/doc/doc.twig
+++ b/packages/views/s-views/src/views/sugar/readme/layouts/doc/doc.twig
@@ -1,4 +1,4 @@
-{% if not sections or 'header' in sections|keys %}
+{% if not sections or 'header' in sections %}
     {% if config.readme.layout.bannerImageUrl %}
 <!-- image -->
 ![{{ config.package.json.name }}]({{ config.readme.layout.bannerImageUrl }})
