--- a/packages/@websites/sugarcss-coffeekraken-io/src/views/layouts/footer/footer.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/views/layouts/footer/footer.css
@@ -23,6 +23,13 @@
         }
     }
 
+    svg [fill='white'] {
+        fill: s.color(main, text);
+    }
+    svg [fill='black'] {
+        fill: s.color(accent);
+    }
+
     @s.theme (dark) {
         svg [fill='white'] {
             fill: s.color(main, text);
@@ -36,8 +43,15 @@
         display: flex;
         justify-content: space-between;
         margin-block-start: 35px;
+        padding-inline-start: s.margin(70);
+        @s.layout '1 2';
 
         @s.media mobile {
+            padding-inline-start: 0;
+            @s.layout '1 _ 2';
+        }
+
+        /* @s.media mobile {
             flex-wrap: wrap;
             display: none;
 
@@ -45,54 +59,6 @@
                 width: 100%;
                 margin-block-start: s.margin(30);
             }
-        }
-    }
-
-    ._collab {
-        background: s.color(main, background);
-        padding-block: s.margin(50);
-        overflow: hidden;
-        position: relative;
-
-        @s.wireframe {
-            @s.wireframe.border;
-        }
-
-        @s.media mobile {
-            display: none;
-        }
-        @s.media tablet {
-            padding-inline: s.padding(50);
-        }
-
-        ._bkg svg {
-            height: 100px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translateX(400px) translateY(-50%);
-            opacity: 0.05;
-        }
-
-        ._join {
-            flex-grow: 1;
-            text-align: right;
-            margin-inline-end: 0 !important;
-        }
-
-        .s-container {
-            display: flex;
-            align-items: center;
-            /* gap: s.margin(50); */
-
-            > * {
-                margin-inline-end: s.margin(50);
-            }
-        }
-
-        svg {
-            width: auto;
-            height: 25px;
-        }
+        } */
     }
 }
