--- a/packages/@websites/sugarcss-coffeekraken-io/src/css/generic/layout.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/css/generic/layout.css
@@ -4,13 +4,17 @@
     bottom: 20px;
     right: 20px;
     background: s.color(main, surface);
-    padding: s.padding(20) s.padding(30);
-    font-size: s.font.size(50);
-    @s.border.radius;
+    padding: s.padding(20);
+    width: 3em;
+    aspect-ratio: 1;
+    @s.shape;
     opacity: 0;
     transform: translateY(50%);
     transition: s.transition(fast);
     poiner-events: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .scrolled & {
         pointer-events: all;
