--- a/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -39,7 +39,7 @@
     text-align: left;
     position: relative;
     z-index: 10;
-    min-height: 100vh;
+    min-height: 1000px;
 
     .s-logo-coffeekraken-picto {
         width: 100px;
