--- a/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/features/features.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/features/features.css
@@ -14,7 +14,7 @@
         @s.layout (1 2 3);
         gap: s.margin(50);
 
-        > *:nth-child(1) {
+        /* > *:nth-child(1) {
             position: relative;
             top: 50px;
         }
@@ -25,7 +25,7 @@
         > *:nth-child(3) {
             position: relative;
             top: -50px;
-        }
+        } */
 
         @s.media mobile {
             @s.layout (1 _ 2 _ 3);
